Resolve named frames on the window object prior to resolving DOM classes.  Fixes bug 222191, defining <frame name="sidebar"> and then referencing window.sidebar yields a sidebar object instead of the named frame window. r=jst, sr=brendan, a=asa